[gd_scene load_steps=12 format=3 uid="uid://0myexbcst06a"]

[ext_resource type="Script" path="res://bean.gd" id="1_qxflj"]
[ext_resource type="Script" path="res://velocity.gd" id="1_sf2ci"]
[ext_resource type="Script" path="res://grapplingGun.gd" id="3_ahoc6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_27feu"]
friction = 0.25

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5pyfu"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p755r"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereMesh" id="SphereMesh_wn8xr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ncp1"]

[sub_resource type="BoxMesh" id="BoxMesh_cagre"]

[sub_resource type="BoxMesh" id="BoxMesh_72l1m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tvmkg"]
albedo_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="bean" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_27feu")
lock_rotation = true
linear_damp = 32.242
script = ExtResource("1_qxflj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_5pyfu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_p755r")

[node name="v" type="Node3D" parent="."]

[node name="h" type="Node3D" parent="v"]

[node name="Camera3D" type="Camera3D" parent="v/h"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52019, 0.209254, 3.56745)

[node name="RayCast3D" type="RayCast3D" parent="v/h/Camera3D"]
transform = Transform3D(2.03, 0, 0, 0, -2.62268e-07, -2.03, 0, 6, -8.87341e-08, 0, 0, -4.12111)
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="rayball" type="MeshInstance3D" parent="v/h/Camera3D/RayCast3D"]
transform = Transform3D(0.0723072, 0, 0, 0, -1.06909e-09, 0.0244579, 0, -0.0723072, -3.16067e-09, -0.00159597, -0.997927, 0.000800118)
mesh = SubResource("SphereMesh_wn8xr")
surface_material_override/0 = SubResource("StandardMaterial3D_8ncp1")

[node name="longRay" type="RayCast3D" parent="v/h/Camera3D"]
transform = Transform3D(1.342, 0, 0, 0, -4.37114e-07, -1.342, 0, 10, -5.86607e-08, 0, 0, -4.12111)
debug_shape_thickness = 5

[node name="rayEnd" type="Node3D" parent="v/h/Camera3D/longRay"]
transform = Transform3D(0.0972481, 0, 0, 0, -5.7018e-10, 0.0130442, 0, -0.0972481, -4.25085e-09, -0.00214647, -0.999558, 0.00107633)

[node name="grapple" type="MeshInstance3D" parent="v/h"]
transform = Transform3D(0.185116, 0, 0, 0, 0.2182, 0, 0, 0, -0.355081, 0.55767, -0.0778795, -0.58788)
mesh = SubResource("BoxMesh_cagre")
skeleton = NodePath("../../../feet")

[node name="MeshInstance3D" type="MeshInstance3D" parent="v"]
transform = Transform3D(0.357546, 0, 0, 0, 0.3, 0, 0, 0, 0.648738, 0.349525, 0.199342, 0)
visible = false
mesh = SubResource("BoxMesh_72l1m")
skeleton = NodePath("../../MeshInstance3D")
surface_material_override/0 = SubResource("StandardMaterial3D_tvmkg")

[node name="movementNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.140992, 0.209254, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="velocity" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sf2ci")

[node name="feet" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.2182, 0, 0, 0, 1, 0, -0.772497, 0)
hit_from_inside = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="grappleController" type="Node3D" parent="." node_paths=PackedStringArray("RayCast")]
script = ExtResource("3_ahoc6")
RayCast = NodePath("../v/h/Camera3D/RayCast3D")

[connection signal="colF" from="." to="grappleController" method="_on_bean_col_f"]
[connection signal="colT" from="." to="grappleController" method="_on_bean_col_t"]
[connection signal="launching" from="grappleController" to="." method="_on_grapple_controller_launching"]
[connection signal="retracted" from="grappleController" to="." method="_on_grapple_controller_retracted"]
